# XDU-PD25-School-Agent

./: AGENTS.md  README.md  biome.json  index.html  package.json  vite.config.ts
.github/: copilot-instructions.md
backend/: .env.example  .gitignore  postman_collection.json  pyproject.toml  requirements.txt  test_rag_api.py
backend/app/: config.py  deps.py  main.py
backend/app/routers/: agent.py  debug.py  rag.py  schedule.py
backend/app/services/: agent_core.py  embedding.py  llm.py  retriever.py  time_constraints.py
backend/app/utils/: textsplit.py
backend/sample_data/: sample_campus_events.json  sample_events.json
plans/: batch_import_redesign_plan.md
src/: main.tsx  routeTree.gen.ts  styles.css
src/components/admin/: APIReference.tsx  ActivityLog.tsx  BatchImportCard.tsx  DangerZone.tsx  DocumentManagement.tsx  DocumentPreviewModal.tsx  FileUploadArea.tsx  ImportConfig.tsx  ImportProgress.tsx  SmartSearch.tsx  StatsDashboard.tsx  useBatchImport.ts
src/hooks/: useApi.ts
src/routes/: __root.tsx  admin.tsx  index.tsx  profile.tsx  schedule.tsx
